[gd_scene load_steps=86 format=3 uid="uid://cah8y53sm3blk"]

[ext_resource type="Script" path="res://scripts/misc/Player.gd" id="1_37at3"]
[ext_resource type="Script" path="res://scripts/logic_ui/starting_item_array_resource.gd" id="2_huiwo"]
[ext_resource type="Texture2D" uid="uid://bsv6waqhjtkfp" path="res://sprites/actors/reimu.png" id="2_kv5a8"]
[ext_resource type="Resource" uid="uid://cbidup4rcsngx" path="res://prefabs/inventory/resources/Persuasion Needles.tres" id="3_xvtp5"]
[ext_resource type="Script" path="res://scripts/logic_ui/starting_item_resource.gd" id="4_65436"]
[ext_resource type="Texture2D" uid="uid://bf1kq504es3wr" path="res://sprites/misc/magic_circle_1.png" id="5_bvy6o"]
[ext_resource type="Texture2D" uid="uid://bqsgbej3ai1oo" path="res://sprites/actors/player_mask.png" id="6_d0cf2"]
[ext_resource type="Texture2D" uid="uid://bex5m364h1ons" path="res://sprites/misc/magic_circle_2.png" id="6_dwehi"]

[sub_resource type="Resource" id="Resource_8s3vs"]
script = ExtResource("4_65436")
item = ExtResource("3_xvtp5")
cooldown = 4
occult_orb = false

[sub_resource type="Resource" id="Resource_qkhnr"]
script = ExtResource("2_huiwo")
starting_item = [SubResource("Resource_8s3vs")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lia0m"]
bg_color = Color(0, 0, 0, 0.329412)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="CircleShape2D" id="CircleShape2D_emnmw"]
radius = 14.0357

[sub_resource type="AtlasTexture" id="AtlasTexture_dockn"]
atlas = ExtResource("2_kv5a8")
region = Rect2(0, 77, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhe42"]
atlas = ExtResource("2_kv5a8")
region = Rect2(11, 77, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5k6c"]
atlas = ExtResource("2_kv5a8")
region = Rect2(22, 77, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_1drmc"]
atlas = ExtResource("2_kv5a8")
region = Rect2(33, 77, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg0pt"]
atlas = ExtResource("2_kv5a8")
region = Rect2(44, 77, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilptw"]
atlas = ExtResource("2_kv5a8")
region = Rect2(55, 77, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce7qv"]
atlas = ExtResource("2_kv5a8")
region = Rect2(0, 33, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4x7e"]
atlas = ExtResource("2_kv5a8")
region = Rect2(11, 33, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ytki"]
atlas = ExtResource("2_kv5a8")
region = Rect2(22, 33, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dxdj"]
atlas = ExtResource("2_kv5a8")
region = Rect2(33, 33, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_1excu"]
atlas = ExtResource("2_kv5a8")
region = Rect2(44, 33, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvjo0"]
atlas = ExtResource("2_kv5a8")
region = Rect2(55, 33, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uxks"]
atlas = ExtResource("2_kv5a8")
region = Rect2(0, 99, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojgfh"]
atlas = ExtResource("2_kv5a8")
region = Rect2(11, 99, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy5hs"]
atlas = ExtResource("2_kv5a8")
region = Rect2(22, 99, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_dokxk"]
atlas = ExtResource("2_kv5a8")
region = Rect2(33, 99, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnxg6"]
atlas = ExtResource("2_kv5a8")
region = Rect2(44, 99, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_30wyo"]
atlas = ExtResource("2_kv5a8")
region = Rect2(55, 99, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t2my"]
atlas = ExtResource("2_kv5a8")
region = Rect2(0, 55, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfvr7"]
atlas = ExtResource("2_kv5a8")
region = Rect2(11, 55, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_t18ex"]
atlas = ExtResource("2_kv5a8")
region = Rect2(22, 55, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4hoc"]
atlas = ExtResource("2_kv5a8")
region = Rect2(33, 55, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2xrw"]
atlas = ExtResource("2_kv5a8")
region = Rect2(44, 55, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bnyx"]
atlas = ExtResource("2_kv5a8")
region = Rect2(55, 55, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk2ci"]
atlas = ExtResource("2_kv5a8")
region = Rect2(0, 11, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmewl"]
atlas = ExtResource("2_kv5a8")
region = Rect2(11, 11, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_itoxn"]
atlas = ExtResource("2_kv5a8")
region = Rect2(22, 11, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_1aomw"]
atlas = ExtResource("2_kv5a8")
region = Rect2(33, 11, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dp5e"]
atlas = ExtResource("2_kv5a8")
region = Rect2(44, 11, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_8spos"]
atlas = ExtResource("2_kv5a8")
region = Rect2(55, 11, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_j027o"]
atlas = ExtResource("2_kv5a8")
region = Rect2(0, 66, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_b855t"]
atlas = ExtResource("2_kv5a8")
region = Rect2(11, 66, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq2y6"]
atlas = ExtResource("2_kv5a8")
region = Rect2(22, 66, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmb2c"]
atlas = ExtResource("2_kv5a8")
region = Rect2(33, 66, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8ycg"]
atlas = ExtResource("2_kv5a8")
region = Rect2(44, 66, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjmaj"]
atlas = ExtResource("2_kv5a8")
region = Rect2(55, 66, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w37g"]
atlas = ExtResource("2_kv5a8")
region = Rect2(0, 22, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_40h8n"]
atlas = ExtResource("2_kv5a8")
region = Rect2(11, 22, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_fht4y"]
atlas = ExtResource("2_kv5a8")
region = Rect2(33, 22, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjpim"]
atlas = ExtResource("2_kv5a8")
region = Rect2(22, 22, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gf3q"]
atlas = ExtResource("2_kv5a8")
region = Rect2(44, 22, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_wp7oy"]
atlas = ExtResource("2_kv5a8")
region = Rect2(55, 22, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_42g73"]
atlas = ExtResource("2_kv5a8")
region = Rect2(0, 88, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd0hn"]
atlas = ExtResource("2_kv5a8")
region = Rect2(11, 88, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8fl8"]
atlas = ExtResource("2_kv5a8")
region = Rect2(22, 88, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj7ie"]
atlas = ExtResource("2_kv5a8")
region = Rect2(33, 88, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwxpi"]
atlas = ExtResource("2_kv5a8")
region = Rect2(44, 88, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7vj5"]
atlas = ExtResource("2_kv5a8")
region = Rect2(55, 88, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2giu"]
atlas = ExtResource("2_kv5a8")
region = Rect2(0, 44, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf2k8"]
atlas = ExtResource("2_kv5a8")
region = Rect2(11, 44, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5jok"]
atlas = ExtResource("2_kv5a8")
region = Rect2(22, 44, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnft0"]
atlas = ExtResource("2_kv5a8")
region = Rect2(33, 44, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jm6s"]
atlas = ExtResource("2_kv5a8")
region = Rect2(44, 44, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_25vhq"]
atlas = ExtResource("2_kv5a8")
region = Rect2(55, 44, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ma68"]
atlas = ExtResource("2_kv5a8")
region = Rect2(0, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_thl2b"]
atlas = ExtResource("2_kv5a8")
region = Rect2(11, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugwya"]
atlas = ExtResource("2_kv5a8")
region = Rect2(22, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_xid7p"]
atlas = ExtResource("2_kv5a8")
region = Rect2(33, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_qx0if"]
atlas = ExtResource("2_kv5a8")
region = Rect2(44, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtre6"]
atlas = ExtResource("2_kv5a8")
region = Rect2(55, 0, 11, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_is7f2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dockn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhe42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5k6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1drmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg0pt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilptw")
}],
"loop": true,
"name": &"idle_diagonal_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce7qv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4x7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ytki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dxdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1excu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvjo0")
}],
"loop": true,
"name": &"idle_diagonal_up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uxks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojgfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy5hs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dokxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnxg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30wyo")
}],
"loop": true,
"name": &"idle_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t2my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfvr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t18ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4hoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2xrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bnyx")
}],
"loop": true,
"name": &"idle_side",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk2ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmewl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itoxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1aomw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dp5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8spos")
}],
"loop": true,
"name": &"idle_up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j027o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b855t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq2y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmb2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8ycg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjmaj")
}],
"loop": true,
"name": &"walk_diagonal_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w37g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40h8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fht4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjpim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gf3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wp7oy")
}],
"loop": true,
"name": &"walk_diagonal_up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42g73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd0hn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8fl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj7ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwxpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7vj5")
}],
"loop": true,
"name": &"walk_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2giu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf2k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5jok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnft0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jm6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25vhq")
}],
"loop": true,
"name": &"walk_side",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ma68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thl2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugwya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xid7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qx0if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtre6")
}],
"loop": true,
"name": &"walk_up",
"speed": 6.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2un4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ybqp8"]
bg_color = Color(1, 0, 0.0156863, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l525y"]
size = Vector2(2, 2)

[sub_resource type="Curve" id="Curve_picaq"]
max_value = 2.0
_data = [Vector2(0, 0.6), 0.0, 0.272727, 0, 1, Vector2(1, 0.872727), 0.272727, 0.0, 1, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_pqeed"]
offsets = PackedFloat32Array(0, 0.461538, 1)
colors = PackedColorArray(1, 0.0196078, 0.0196078, 1, 1, 0, 0.0156863, 1, 1, 1, 1, 0)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3vg3m"]
radius = 3.0
height = 8.0

[sub_resource type="Curve" id="Curve_jdk0i"]
max_value = 2.0
_data = [Vector2(0, 0), 0.0, 2.33877, 0, 1, Vector2(0.544186, 1.27273), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.79221, 0.0, 1, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_n73m6"]
resource_name = "gap_teleport_in"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WalkAnimations:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Teleport_Mask/TeleportAnimation:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Teleport_Mask:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Teleport_Mask/TeleportAnimation:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.25, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 11)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Teleport_Mask:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Healthbar:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("hitbox:monitoring")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("hitbox:monitorable")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Teleport_Mask/TeleportAnimation:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.15, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1), Vector2(1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Item_Pickup:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_aopch"]
resource_name = "gap_teleport_out"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WalkAnimations:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Teleport_Mask/TeleportAnimation:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Teleport_Mask:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.25, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Teleport_Mask/TeleportAnimation:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 11), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Teleport_Mask:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Healthbar:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("hitbox:monitoring")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("hitbox:monitorable")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "method"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"gap_close"
}]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Teleport_Mask/TeleportAnimation:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.25, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1), Vector2(1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Item_Pickup:disabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k157t"]
_data = {
"gap_teleport_in": SubResource("Animation_n73m6"),
"gap_teleport_out": SubResource("Animation_aopch")
}

[sub_resource type="Animation" id="Animation_y65ni"]
resource_name = "spin"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MagicCircle/Sprites/MagicCircle1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28144]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MagicCircle/Sprites/MagicCircle2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28144]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nqq70"]
_data = {
"spin": SubResource("Animation_y65ni")
}

[node name="player" type="CharacterBody2D"]
z_index = 7
texture_filter = 1
collision_mask = 0
floor_constant_speed = true
script = ExtResource("1_37at3")
starting_items = SubResource("Resource_qkhnr")

[node name="Panel" type="Panel" parent="."]
offset_left = -4.0
offset_top = 1.0
offset_right = 4.0
offset_bottom = 7.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lia0m")

[node name="MagicCircle" type="Node2D" parent="."]

[node name="ItemPull" type="Area2D" parent="MagicCircle"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagicCircle/ItemPull"]
shape = SubResource("CircleShape2D_emnmw")

[node name="Sprites" type="Node2D" parent="MagicCircle"]
visible = false

[node name="MagicCircle1" type="Sprite2D" parent="MagicCircle/Sprites"]
rotation = 0.398474
texture = ExtResource("5_bvy6o")

[node name="MagicCircle2" type="Sprite2D" parent="MagicCircle/Sprites"]
rotation = -0.398474
texture = ExtResource("6_dwehi")

[node name="WalkAnimations" type="AnimatedSprite2D" parent="."]
frames = SubResource("SpriteFrames_is7f2")
animation = &"idle_down"

[node name="Teleport_Mask" type="Sprite2D" parent="."]
visible = false
clip_children = 1
texture = ExtResource("6_d0cf2")

[node name="TeleportAnimation" type="Sprite2D" parent="Teleport_Mask"]
texture = ExtResource("2_kv5a8")
hframes = 6
vframes = 10
frame = 56

[node name="Healthbar" type="ProgressBar" parent="."]
offset_left = -4.0
offset_top = 6.0
offset_right = 4.0
offset_bottom = 7.0
theme_override_styles/background = SubResource("StyleBoxFlat_u2un4")
theme_override_styles/fill = SubResource("StyleBoxFlat_ybqp8")
step = 1.0
value = 100.0
show_percentage = false

[node name="hitbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("RectangleShape2D_l525y")

[node name="damage_effect" type="CPUParticles2D" parent="."]
emitting = false
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector2(0, -1)
gravity = Vector2(0, 27.074)
initial_velocity_min = 20.0
initial_velocity_max = 25.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_picaq")
color = Color(1, 0, 0, 1)
color_ramp = SubResource("Gradient_pqeed")

[node name="Item_Pickup" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3vg3m")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 20
emission_shape = 3
emission_rect_extents = Vector2(200, 100)
gravity = Vector2(0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 4.0
angular_velocity_min = 1.0
angular_velocity_max = 12.52
scale_amount_curve = SubResource("Curve_jdk0i")
color = Color(0.521569, 0.870588, 0.133333, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k157t")
}

[node name="magic_circle_spins" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nqq70")
}

[connection signal="area_entered" from="MagicCircle/ItemPull" to="." method="_on_item_pull_area_entered"]
[connection signal="area_exited" from="MagicCircle/ItemPull" to="." method="_on_item_pull_area_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
